--- a/file.css
+++ b/file.css
@@ -1,5 +1,5 @@
 body {
-  background-color: green; /* фон страницы */
+  background-color: rgb(75, 231, 231); /* фон страницы */
   font-family: Arial, sans-serif; /* шрифт */
 }
 
