--- a/file.css
+++ b/file.css
@@ -29,22 +29,28 @@ html, body {
 }
 
 .captured-left, .captured-right {
-  top: 50%;             /* по центру вертикали */
-  transform: translateY(-50%); /* центрируем точно по середине */
-  width: 100px;         /* ширина клетки */
-  height: 80vmin;       /* высота = высота доски */
+  position: absolute;       /* фиксируем относительно родителя или страницы */
+  top: 55%;                 /* центрируем по вертикали */
+  transform: translateY(-50%);
+  width: 100px;
+  height: 80vmin;
   border: 2px solid black;
-  background: white;    /* фон */
+  background: white;
+  display: flex;
+  flex-direction: column;   /* если будут фигурки сверху вниз */
 }
 
 .captured-left {
-  left: 0;              /* прилипает к левому краю страницы */
-  position: relative left
+  left: 0;
+  justify-content: flex-start; /* если нужно расположить элементы сверху вниз */
 }
 
 .captured-right {
-  right: 0;             /* прилипает к правому краю страницы */
+  right: 0;
+  justify-content: flex-start; /* тоже сверху вниз */
 }
+
+
 
 
 body {
@@ -54,8 +60,11 @@ body {
 }
 
 .container {
+
+  background-color: aliceblue;
   max-width: 800px;
   margin: 0 auto;
+  padding: 10px;
 }
 
 .title {
@@ -106,4 +115,15 @@ body {
   transform: translate(-50%, -50%); /* сдвигаем в центр */
   color: white;
   border-radius: 5px;
+}
+
+.ramka {
+  position: fixed;       
+  top: 50%;
+  left: 50%;         
+  transform: translate(-50%, -50%);
+  width: 1000px;
+  height: 80vmin;
+  border: 2px solid black;
+  background: white;
 }
